--- a/css/style.css
+++ b/css/style.css
@@ -336,8 +336,8 @@ footer {
 @media only screen and (max-width: 665px) {
   /* Main Content */
   .main-title {
-    padding: 0 20px;
     font-size: 2em;
+    margin: 0 20px;
   }
 
   /* About */
