--- a/css/style.css
+++ b/css/style.css
@@ -92,42 +92,57 @@ header {
 
 /* Main Content */
 .container {
+  display: flex;
+  flex-direction: column;
   margin: 200px auto 0 auto;
   max-width: auto;
   background-color: #043c2c;
   padding-top: -10em;
+
 }
 
 .intro {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+}
 
+.title {
+  width: 50%;
+  text-align: center;
+  margin-left: 10%;
+  margin-bottom: 5%;
 }
 
 .main-title {
-  text-align: center;
-  font-family: 'Raleway', sans-serif;
-  font-size: 4em;
-  letter-spacing: 1px;
-  margin-top: 7%;
+  font-size: 50px;
+  margin-bottom: 16px;
+  text-align: start;
+  margin-left: 36%;
 }
 
 .join-btn {
-  margin: 2em auto;
-  padding: 2em 1vh;
-  border-radius: 20em;
-  width: 15em;
+  display: block;
+  width: 10em;
+  margin: 0 auto;
   text-align: center;
   text-decoration: none;
-  font-size: 1.5em;
-  font-weight: 1000;
-  letter-spacing: 3px;
-  color: #013d2b;
-  background-color: #ade6b9;
+  padding: 8px 16px;
+  border: 1px solid #000;
+  border-radius: 20px;
+  font-size: 30px;
+  font-weight: bold;
   border: 2px solid #013d2b;
   transition: .3s;
-  margin-top: 3em;
-  margin-bottom: 4.5em;
+  color: #013d2b;
+  background-color: #ade6b9;
+  margin-right: 5.5em;
+}
+
+.phone {
+   width: 50%;
+   text-align: right;
+   margin-right: 10%;
+   margin-bottom:  5%;;
 }
 
 .join-btn:hover {
