--- a/css/style.css
+++ b/css/style.css
@@ -111,17 +111,22 @@ header {
   text-align: center;
   margin-left: 10%;
   margin-bottom: 5%;
+
 }
 
 .main-title {
-  font-size: 50px;
+  font-size: 100px;
   margin-bottom: 16px;
+  padding-right: 2em;
   text-align: start;
   margin-left: 36%;
+  font-weight: 2em;
+
 }
 
 .join-btn {
   display: block;
+  flex-wrap: wrap;
   width: 10em;
   margin: 0 auto;
   text-align: center;
@@ -135,7 +140,7 @@ header {
   transition: .3s;
   color: #013d2b;
   background-color: #ade6b9;
-  margin-right: 5.5em;
+  margin-right: 7.0em;
 }
 
 .phone {
@@ -143,6 +148,11 @@ header {
    text-align: right;
    margin-right: 10%;
    margin-bottom:  5%;;
+   margin-top: 4%;
+}
+
+.phone img {
+  transform: scale(1.4);
 }
 
 .join-btn:hover {
