--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ header {
   flex-direction: row;
   justify-content: space-around;
   background-color: #ffffff;
-  padding: 4em;
+  padding: .1em;
   align-items: center;
 
 }
@@ -94,7 +94,7 @@ header {
 .container {
   display: flex;
   flex-direction: column;
-  margin: 200px auto 0 auto;
+  margin: 50px auto 0 auto;
   max-width: auto;
   background-color: #043c2c;
   padding-top: -10em;
